tests/e2e/call_function_expression_unary_complex_4.error
Error: syntax error in story at line 5, column 27

5|    a = my_function(k1: not b or 2)
                                ^

E0046: An indented block is required to be before here
