tests/e2e/call_function_expression_unary_complex_4.story
function my_function k1:int returns int
	return 0

b = true
a = my_function(k1: not b or 2)
